--- a/Proyecto Intermodular/102-Ejercicios prácticos segundo trimestre/103-Jinja/templates/backoffice.html
+++ b/Proyecto Intermodular/102-Ejercicios prácticos segundo trimestre/103-Jinja/templates/backoffice.html
@@ -20,9 +20,6 @@
 				{% for tabla in mis_tablas:%}
 					<a>{{tabla}}</a>
 				{% endfor %}
-				<a>Clientes</a>
-				<a>Productos</a>
-				<a>Pedidos</a>
 			</nav>
 			<section>
 				<style>
@@ -33,7 +30,9 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Nombre</th><th>Apellidos</th><th>Email</th><th>Direccion</th>
+							{% for columna in mis_columnas:%}
+								<th>{{columna}}</th>
+							{% endfor %}
 						</tr>
 					</thead>
 					<tbody>
