--- a/Programación/006-Aplicación de estructuras de almacenamiento/007-Operaciones agregadas filtrado, reducción y recolección/templates/index.html
+++ b/Programación/006-Aplicación de estructuras de almacenamiento/007-Operaciones agregadas filtrado, reducción y recolección/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 	<head>
 		<style>
-			html,body{padding:0x;margin:0px;height:100%;width:100%;}
+			html,body{backgorundpadding:0x;margin:0px;height:100%;width:100%;}
 			body{
-				background:grey;display:flex;justify-content:center;align-items:center;
+				background:Lavender;display:flex;justify-content:center;align-items:center;
 			}
 			main{background:white;height:400px;width:400px;display:grid;grid-template-columns:repeat(3,100fr);}
 			section{display:grid;grid-template-columns:repeat(3,100fr);}
