--- a/Programación/006-Aplicación de estructuras de almacenamiento/007-Operaciones agregadas filtrado, reducción y recolección/templates/index.html
+++ b/Programación/006-Aplicación de estructuras de almacenamiento/007-Operaciones agregadas filtrado, reducción y recolección/templates/index.html
@@ -7,7 +7,7 @@
 				background:Lavender;display:flex;justify-content:center;align-items:center;
 			}
 			main{background:white;height:400px;width:400px;display:grid;grid-template-columns:repeat(3,100fr);}
-			section{display:grid;grid-template-columns:repeat(3,100fr);}
+			section{display:grid;grid-template-columns:repeat(3,100fr);border:1.5px solid black;}
 			div{
 				display:flex;justify-content:center;
 				align-items:center;font-size:30px;border:1px solid grey;}
