--- a/Programación/010-Programación en el lado del servidor/009-Implantacion crud/aplicacion/admin/css/estilo.css
+++ b/Programación/010-Programación en el lado del servidor/009-Implantacion crud/aplicacion/admin/css/estilo.css
@@ -16,6 +16,21 @@ main{
 	flex:4;
 	background:white;
 }
+#nuevo{
+	position:absolute;
+	bottom:20px;
+	right:20px;
+	background:teal;
+	color:white;
+	width:30px;
+	height:30px;
+	border-radius:40px;
+	text-align:center;
+	font-size:30px;
+	line-height:30px;
+	text-decoration:none;
+	font-weight:bold;
+}
 /* ESTILOS DEL MENU ///////////// */
 nav{
 	display:flex;
@@ -45,3 +60,30 @@ table th{
 table td,table th{
 	padding:5px;
 }
+/* ESTILOS DEL FORMULARIO ///////////// */
+form{
+	display:flex;
+	width:100%;
+	flex-direction:column;
+	gap:20px;
+}
+.controlformulario{
+	display:flex;
+	width:100%;
+	flex-direction:column;
+}
+form imput{
+	padding:10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
