--- a/Programación/010-Programación en el lado del servidor/009-Implantacion crud/aplicacion/admin/css/estilo.css
+++ b/Programación/010-Programación en el lado del servidor/009-Implantacion crud/aplicacion/admin/css/estilo.css
@@ -60,6 +60,28 @@ table th{
 table td,table th{
 	padding:5px;
 }
+.eliminar{
+	width:25px;
+	height:25px;
+	background:LightCoral;
+	border-radius:30px;
+	color:white;
+	line-height:25px;
+	text-decoration:none;
+	display:block;
+	text-align:center;
+}
+.editar{
+	width:25px;
+	height:25px;
+	background:LightBlue;
+	border-radius:30px;
+	color:white;
+	line-height:25px;
+	text-decoration:none;
+	display:block;
+	text-align:center;
+}
 /* ESTILOS DEL FORMULARIO ///////////// */
 form{
 	display:flex;
